# vapi-prototype

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_INDEX.md  README.md  SECURITY.md  calibration_profile.json  calibration_profile_live.json  check_hid.py  lessons.md  memory.md  package-lock.json  pytest.ini  start_bridge.ps1  start_dev.bat
.github/workflows/: ci.yml
analysis/phase17_validation/: results.json
app/: vapi-dualshock-companion.py
bridge/: .env.example  .env.pitl-verifier  .env.testnet  Dockerfile  LESSONS.md  README.md  attestation-enforcement-guide.md  calibration_profile_live.json  docker-compose.yml  dualshock-bridge-guide.md  hardware-signing-guide.md  mosquitto.conf  physical-input-trust-guide.md  requirements.txt  swarm_zk_aggregator.py  tiered-registration-guide.md  zk_prover.py
bridge/controller/: l6_challenge_profiles.py  l6_trigger_driver.py  l6b_reflex_analyzer.py
bridge/scripts/: generate_bridge_keystore.py
bridge/systemd/: vapi-bridge.service
bridge/tests/: conftest.py  test_adaptive_l4.py  test_agent_cross_device.py  test_agent_intelligence.py  test_agent_memory.py  test_agent_persistence.py  test_agent_streaming.py  test_agent_tools_extended.py  test_alert_router.py  test_backend_cheat_classifier.py  test_batcher_receipt.py  test_batcher_recovery.py  test_behavioral_archaeologist.py  test_behavioral_batcher.py  test_biometric_fusion.py  test_bridge_agent.py  test_bridge_agent_tool31.py  test_calibration_agent.py  test_chain_keystore.py  test_chain_reconciler.py  test_chain_v2_methods.py  test_coap_transport.py  test_codec.py  test_continuity_prover.py  test_credential_enforcement_store.py  test_credential_suspension.py  (+79 more)
calibration/: l6_calibration_profile.json
contracts/: .env.example  deployed-addresses.json  gas-report.md  hardhat.config.js  package-lock.json  package.json
controller/: anti_cheat_test_suite.py  architecture.md  device_profile.py  diag_accel.py  diag_raw_hid.py  diag_sticks.py  dualshock-laptop-testing-guide.md  dualshock-laptop-testing-suite.py  dualshock_emulator.py  feature_normalizer.py  firmware-port-guide.md  hid_report_parser.py  knapsack_personalized.py  l0_bluetooth_presence.py  l2b_imu_press_correlation.py  l2c_stick_imu_correlation.py  optimization-guide.md  persistent_identity.py  phci_certification.py  temporal_rhythm_oracle.py  tinyml_backend_cheat.py  tinyml_biometric_fusion.py  vapi-dualshock-spec.md  world_model_continual.py
docs/: README.md  accel-entropy-calibration.md  adversarial-validation-results.md  architecture.md  bluetooth-threshold-analysis.md  bridge-configuration.md  button-fingerprint-analysis.md  detection-benchmarks.md  dualshock-edge-hid-format.md  hardware-testing-guide.md  interperson-separation-analysis-v2.md  interperson-separation-analysis.md  interperson-separation-data-v2.json  interperson-separation-data.json  iotex-testnet-deployment-runbook.md  pandoc-academic.yaml  phase-coherence-calibration.md  phase17-validation-results.md  preprocess_whitepaper.py  production-deployment-guide.md  professional-adversarial-analysis.md  vapi-sdk-guide.md  vapi-whitepaper-v2.md  vapi-whitepaper-v3-novel.md  vapi-whitepaper-v3.md  whitepaper-v2-to-v3-novel-rewrite-map.md
firmware/: CMakeLists.txt  Kconfig  prj.conf
firmware/boards/: pebble_tracker.overlay
firmware/include/: agent.h  coap_bounty_feed.h  economic.h  perception.h  poac.h  tinyml.h
firmware/src/: agent.c  coap_bounty_feed.c  economic.c  main.c  perception.c  poac.c  tinyml.c
frontend/: .env.example  VAPIDashboard.jsx  controller-twin.html  index.html  package-lock.json  package.json  vite.config.js
overview/: agent-enhancements.md  vapi-dualshock-primary.md
paper/: vapi-whitepaper.md
positioning/: physical-input-trust-layer.md
scripts/: accel_entropy_calibration.py  analyze_button_fingerprint.py  analyze_interperson_separation.py  batch_analyze_phase17_signals.py  capture_session.py  first_session_protocol.py  generate_adversarial_from_real.py  generate_adversarial_sessions.py  generate_professional_adversarial.py  generate_synthetic_players.py  hardware_setup.sh  l6_capture_session.py  l6_hardware_check.py  l6_threshold_calibrator.py  phase_coherence_calibration.py  run_adversarial_validation.py  test_bridge_agents_live.py  test_dashboard_connection.py  testnet_smoke_test.py  threshold_calibrator.py  validate_detection.py
sdk/: conftest.py  openapi.yaml  vapi.h  vapi_agent.py  vapi_sdk.py
security/: sybil-analysis.md  threat-model.md
tasks/: gate-check.md  lessons.md  todo.md
tests/: __init__.py  test_detection_realistic.py
tools/: poac_inspector.py
whitepaper/: vapi-whitepaper.md
(+197 files in other folders)
