# SPDX-License-Identifier: Apache-2.0
#
# VAPI — Verified Autonomous Physical Intelligence
# Zephyr/nRF Connect SDK CMake Build Configuration
#
# Target: IoTeX Pebble Tracker (nRF9160, nRF Connect SDK v2.7+ / v3.x)
#
# Build:
#   west build -b nrf9160dk_nrf9160_ns firmware/
#   (Use Pebble-specific board overlay for production)
#
# Flash:
#   west flash
#   OR: nrfjprog --program build/zephyr/merged.hex --chiperase --verify
#

cmake_minimum_required(VERSION 3.20.0)

# Find Zephyr package (provided by nRF Connect SDK / west workspace)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

project(vapi_agent
    VERSION 0.2.0
    DESCRIPTION "Verified Autonomous Physical Intelligence — Pebble Tracker Agent"
    LANGUAGES C
)

# --------------------------------------------------------------------------
# Source files
# --------------------------------------------------------------------------

target_sources(app PRIVATE
    src/main.c
    src/poac.c
    src/perception.c
    src/agent.c
    src/economic.c
    src/tinyml.c
)

# --------------------------------------------------------------------------
# Include paths
# --------------------------------------------------------------------------

target_include_directories(app PRIVATE
    include
)

# --------------------------------------------------------------------------
# Edge Impulse TinyML integration (optional)
#
# To enable a trained Edge Impulse model:
#   1. Export as "C++ library" from Edge Impulse Studio
#   2. Unzip into models/edge_impulse/ (preserving directory structure)
#   3. Set CONFIG_VAPI_EDGE_IMPULSE=y in prj.conf
#   4. Rebuild: west build -p -- -DDTC_OVERLAY_FILE=...
#
# When disabled (default), the heuristic fallback in tinyml.c provides
# statistical motion classification from raw sensor thresholds.
# --------------------------------------------------------------------------

if(CONFIG_VAPI_EDGE_IMPULSE)
    set(EI_SDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../models/edge_impulse)

    # Edge Impulse C++ library requires C++ support
    enable_language(CXX)

    # EI SDK core sources
    file(GLOB_RECURSE EI_SDK_SOURCES
        "${EI_SDK_DIR}/edge-impulse-sdk/classifier/*.cpp"
        "${EI_SDK_DIR}/edge-impulse-sdk/dsp/*.cpp"
        "${EI_SDK_DIR}/edge-impulse-sdk/tensorflow/lite/micro/*.cpp"
        "${EI_SDK_DIR}/edge-impulse-sdk/tensorflow/lite/micro/*.c"
        "${EI_SDK_DIR}/edge-impulse-sdk/tensorflow/lite/micro/kernels/*.cpp"
        "${EI_SDK_DIR}/edge-impulse-sdk/tensorflow/lite/core/*.cpp"
        "${EI_SDK_DIR}/edge-impulse-sdk/CMSIS/DSP/Source/TransformFunctions/*.c"
        "${EI_SDK_DIR}/edge-impulse-sdk/CMSIS/DSP/Source/CommonTables/*.c"
        "${EI_SDK_DIR}/edge-impulse-sdk/CMSIS/DSP/Source/BasicMathFunctions/*.c"
        "${EI_SDK_DIR}/edge-impulse-sdk/CMSIS/DSP/Source/StatisticsFunctions/*.c"
        "${EI_SDK_DIR}/edge-impulse-sdk/CMSIS/NN/Source/*.c"
    )

    # Trained model glue code (generated by EI Studio export)
    file(GLOB EI_MODEL_SOURCES
        "${EI_SDK_DIR}/tflite-model/*.cpp"
    )

    target_sources(app PRIVATE
        ${EI_SDK_SOURCES}
        ${EI_MODEL_SOURCES}
    )

    target_include_directories(app PRIVATE
        ${EI_SDK_DIR}
        ${EI_SDK_DIR}/edge-impulse-sdk
        ${EI_SDK_DIR}/edge-impulse-sdk/classifier
        ${EI_SDK_DIR}/edge-impulse-sdk/dsp
        ${EI_SDK_DIR}/edge-impulse-sdk/third_party
        ${EI_SDK_DIR}/edge-impulse-sdk/tensorflow
        ${EI_SDK_DIR}/edge-impulse-sdk/CMSIS/DSP/Include
        ${EI_SDK_DIR}/edge-impulse-sdk/CMSIS/NN/Include
        ${EI_SDK_DIR}/model-parameters
    )

    # EI SDK requires these defines
    target_compile_definitions(app PRIVATE
        EI_PORTING_ZEPHYR=1
        EI_CLASSIFIER_TFLITE_ENABLE_CMSIS_NN=1
        __ARM_FEATURE_DSP=1
    )

    # Suppress third-party warnings in EI SDK
    set_source_files_properties(${EI_SDK_SOURCES} ${EI_MODEL_SOURCES}
        PROPERTIES COMPILE_FLAGS "-w"
    )
endif()

# --------------------------------------------------------------------------
# Compiler options
# --------------------------------------------------------------------------

# Enable link-time optimization for smaller binary
target_compile_options(app PRIVATE
    -Os                    # Optimize for size
    -Wall                  # All warnings
    -Wextra                # Extra warnings
    -Wno-unused-parameter  # Agent callbacks often have unused params
)

# Float formatting support for LOG_INF with %f
# (Zephyr disables this by default to save space)
zephyr_compile_options(-u _printf_float)
